--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,15 @@
             <version>20220320</version>
         </dependency>
 
+        <!-- mail library -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+
+        <!-- mail 서포트 -->
+
     </dependencies>
 
 
